--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,22 @@
   "dependencies": {
     "@coreui/coreui": "^5.0.0",
     "@coreui/react": "^5.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@google/generative-ai": "^0.21.0",
+    "@mui/material": "^6.3.0",
     "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^0.10.0",
-    "axios": "^1.6.8",
+    "axios": "^0.27.2",
     "fs-react": "^0.0.4",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-collapsed": "^4.1.2",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
